--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('./assets/fonts/Ubuntu-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('./assets/fonts/Ubuntu-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('./assets/fonts/Ubuntu-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
 :root{
   /* ### Primary */
 
@@ -13,11 +34,10 @@
   --magnolia: hsl(217, 100%, 97%);
   --alabaster: hsl(231, 100%, 99%);
   --white: hsl(0, 0%, 100%);
-
-/* - Weights: 400, 500, 700s */
 }
 
 body {
+  font-family: 'Ubuntu', sans-serif;
   margin: 0;
   background-color: var(--magnolia);
 }
@@ -31,4 +51,8 @@ body {
 
 p {
   font-size: 16px;
+}
+
+input {
+  display: block;
 }
