--- a/src/components/Step.css
+++ b/src/components/Step.css
@@ -12,4 +12,8 @@
     height: 20px;
     margin-right: 8%;
     text-align: center;
+    &.selected {
+        color: #000;
+        background-color: var(--white);
+    }
 }
