--- a/src/components/content/components/Step2/Step2.css
+++ b/src/components/content/components/Step2/Step2.css
@@ -8,7 +8,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 5%;
-    margin: 10% 18% 5% 0%;
+    margin: 8% 18% 5% 0%;
 }
 
 .plan {
@@ -36,4 +36,14 @@
 
 .plan-rate {
     color: var(--cool-gray);
+}
+
+.tenure-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(227 240 251);
+    width: 82%;
+    height: 38px;
+    border-radius: 5px;
 }
