--- a/src/components/content/Content.css
+++ b/src/components/content/Content.css
@@ -8,10 +8,12 @@
     margin-top: 5%;
 }
 
-.ui-btn-primary {
-    margin-top: 7%;
-    float: right;
-    margin-right: 25%;
+.footer {
+    margin-top: 15%; 
+    width: 82%; 
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between;
 }
 
 .go-back {
