--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,10 @@
   height: 100%;
   width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  .warpper {
+    width: 100vw;
+    height: 100vh;
+  }
+}
